--- a/AliceHelptProject/package.json
+++ b/AliceHelptProject/package.json
@@ -14,9 +14,12 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "i": "^0.3.7",
+    "npm": "^8.10.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-multiple-choice-picker": "^1.0.6",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
